tests/NormalTests/paczka1/fuzzy1/22615768.err
Error in line 10: BSZYH5 A516 43,72
Error in line 16: l1Hc1vl0s S303 97,6
Error in line 19: KXA A714 91,7
Error in line 27: BSZYH5 A516 38,0
Error in line 32: BSZYH5 S303 47,9
